fix menu not showing on mobile

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -112,6 +112,7 @@
         top: 65px;
         background-color: teal;
         overflow: hidden;
+        z-index: 3;
     }
 }
 
